--- a/dev/index.html
+++ b/dev/index.html
@@ -3,7 +3,7 @@
     <script src="bundle.js"></script>
   </head>
   <body>
-    <fin-fs-browser host="http://localhost:3000" collection="example_1-pets"></fin-fs-browser>
+    <fin-fs-browser host="http://localhost:3000" collection="ex-sherry-lehmann"></fin-fs-browser>
   
     <script>
       setTimeout(() => {
