wiring up virtual list

--- a/dev/index.html
+++ b/dev/index.html
@@ -3,8 +3,9 @@
     <script src="bundle.js"></script>
   </head>
   <body>
-    <fin-fs-browser host="http://localhost:3000" collection="ex-sherry-lehmann"></fin-fs-browser>
-  
+    <!-- <fin-fs-browser host="http://localhost:3000" collection="ex-sherry-lehmann"></fin-fs-browser> -->
+    <fin-fs-browser host="https://sandbox.dams.library.ucdavis.edu" collection="sherry-lehmann"></fin-fs-browser>
+
     <script>
       setTimeout(() => {
         document.querySelector('fin-fs-browser').setPath('/');
